k8s/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-me
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: grafana.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
status:
  loadBalancer:
    ingress:
    - hostname: localhost

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-me
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prometheus.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
status:
  loadBalancer:
    ingress:
    - hostname: localhost

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-me
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: alertmanager.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-alertmanager
            port:
              number: 9093
status:
  loadBalancer:
    ingress:
    - hostname: localhost
